--- a/ChatWave/Auth/templates/register/registerbase.html
+++ b/ChatWave/Auth/templates/register/registerbase.html
@@ -38,7 +38,7 @@
         .left-side {
             flex: 1;
             position: relative;
-            background: url('https://media.discordapp.net/attachments/958193242892042261/1312454950034608168/sunset.png?ex=675914ac&is=6757c32c&hm=cd5f2ee9e08021e9615f73a488dcb4f57d39f8a3488321b9dd9b1de149da2705&=&format=webp&quality=lossless') no-repeat center center;
+            background: url('https://i.pinimg.com/236x/e8/09/96/e80996946bf1d2ffa41c8ff298d1020e.jpg') no-repeat center center;
             background-size: cover;
             background-color: #2a1215;
             image-rendering: pixelated;
