--- a/ChatWave/Auth/templates/login/loginbase.html
+++ b/ChatWave/Auth/templates/login/loginbase.html
@@ -36,7 +36,7 @@
     .left-side {
         flex: 1;
         position: relative;
-        background: url('https://media.discordapp.net/attachments/958193242892042261/1312454950034608168/sunset.png?ex=675914ac&is=6757c32c&hm=cd5f2ee9e08021e9615f73a488dcb4f57d39f8a3488321b9dd9b1de149da2705&=&format=webp&quality=lossless');
+        background: url('https://i.pinimg.com/236x/e8/09/96/e80996946bf1d2ffa41c8ff298d1020e.jpg');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -291,7 +291,7 @@
                           <span class="checkmark"></span>
                           Remember me
                       </label>
-                      <a href="{% url 'register_logic' %}" class="forgot-password">Forgot Password?</a>
+                      <a href="{% url 'forgot_password' %}" class="forgot-password">Forgot Password?</a>
                   </div>
 
                   <button type="submit" class="login-btn">Login</button>
